Fix misaligned error markers

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ button {
 
 .error {
     position: absolute;
+    top: 0px;
     background-color: transparent;
     border: 2px red solid;
 }
